--- a/style.css
+++ b/style.css
@@ -25,6 +25,44 @@ body {
     z-index: 10;
 }
 
+.logo-juego{
+    /* border-radius:50%; */
+    border:6px solid #000;
+}
+
+.menu-screen-menu-hamburger{
+    width:60px;
+    height:60px;
+    position: absolute;
+    top:10px;
+    right:10px;
+    /* background-color: red; */
+}
+
+.menu-screen-menu-hamburger span{
+    width:100%;
+    height:10px;
+    margin:10px 0;
+    background-color: #ccc;
+    position: absolute;
+    display:flex;
+    align-items:center;
+    justify-content:space-around;
+    border-radius:20px;
+}
+/* 
+.span1{
+    top:10px;
+} */
+
+.span2{
+    top:20px;
+}
+
+.span3{
+    top:40px;
+}
+
 .hidden {
     opacity: 0;
     transform: scale(0.8);
